--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "electron-updater-example",
-  "version": "0.4.4",
+  "version": "0.4.6",
   "main": "main.js",
   "description": "electron-updater example project",
   "author": "Matt Haggard",
@@ -9,6 +9,7 @@
     "electron-builder": "^12.3.1"
   },
   "dependencies": {
+    "electron-is-dev": "^0.1.2",
     "electron-log": "^1.3.0",
     "electron-updater": "^1.4.2"
   },
