--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "electron-updater-example",
-  "version": "0.4.6",
+  "version": "0.4.7",
   "main": "main.js",
   "description": "electron-updater example project",
   "author": "Matt Haggard",
@@ -11,7 +11,10 @@
   "dependencies": {
     "electron-is-dev": "^0.1.2",
     "electron-log": "^1.3.0",
-    "electron-updater": "^1.4.2"
+    "electron-notify": "^0.1.0",
+    "electron-updater": "^1.4.2",
+    "is-online": "^7.0.0",
+    "offline-js": "^0.7.18"
   },
   "build": {
     "appId": "com.github.iffy.electronupdaterexample",
