--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "electron-notify": "^0.1.0",
     "electron-updater": "^1.4.2",
     "is-online": "^7.0.0",
+    "jquery": "^3.2.1",
     "offline-js": "^0.7.18"
   },
   "build": {
